--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/SavouryGin/chop_logic/issues"
   },
-  "homepage": "https://github.com/SavouryGin/chop_logic#readme"
+  "homepage": "https://github.com/SavouryGin/chop_logic#readme",
+  "devDependencies": {
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
