--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "serve": "^13.0.2",
     "terser-webpack-plugin": "^5.3.0",
