--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.5.1",
     "serve": "^13.0.2",
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
