--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
+    "sass": "^1.46.0",
+    "sass-loader": "^12.4.0",
     "serve": "^13.0.2",
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
