--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass": "^1.46.0",
     "sass-loader": "^12.4.0",
     "serve": "^13.0.2",
+    "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
