--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.7",
     "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -60,6 +61,7 @@
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.7",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/node": "^17.0.6",
     "@types/react": "^17.0.38",
