--- a/package.json
+++ b/package.json
@@ -67,11 +67,10 @@
     "@types/node": "^17.0.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/react-redux": "^7.1.21",
     "guid-typescript": "^1.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.0-beta.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "typescript": "^4.5.4"
