--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.18.0",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.0.0-alpha.7",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
@@ -48,31 +52,27 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.0",
     "prettier": "^2.5.1",
     "sass": "^1.46.0",
-    "sass-loader": "^12.4.0",
+    "sass-loader": "^13.0.0",
     "serve": "^13.0.2",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
+    "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.7",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@types/node": "^17.0.6",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "guid-typescript": "^1.0.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^8.0.0-beta.1",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "typescript": "^4.5.4"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   }
 }
