--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
+    "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
