--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.5.1",
     "sass": "^1.46.0",
     "sass-loader": "^13.0.0",
