--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "guid-typescript": "^1.0.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-focus-lock": "^2.9.1",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
