--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.5.1",
+    "redux-saga-test-plan": "^4.0.6",
     "sass": "^1.46.0",
     "sass-loader": "^13.0.0",
     "source-map-loader": "^4.0.1",
