bug-13: fix webpack config for index.html

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chop Logic",
-  "name": "Chop Logic by Dmitrii Suroviagin",
+  "name": "Chop Logic Project by Dmitrii Suroviagin",
   "icons": [
     {
       "src": "favicon.ico",
