ts-94: install react-latex

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "@types/react-latex": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "babel-loader": "^9.1.0",
@@ -76,6 +77,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.3",
+    "react-latex": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
