--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sass-loader": "^13.0.0",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
