--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.8.2",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.5.1",
@@ -64,7 +65,7 @@
     "sass-loader": "^13.0.0",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
-    "svg-inline-loader": "^0.8.2",
+    "svgo": "^3.0.2",
     "terser-webpack-plugin": "^5.3.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
